@@ -18,7 +18,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-AC_REVISION($Revision: 1.198 $)
+AC_REVISION($Revision: 1.199 $)
 AC_INIT([GNU Backgammon],[0.9.0],[bug-gnubg@gnu.org],[gnubg])
 AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
@@ -218,7 +218,6 @@ if test "$with_gtk" != "no"; then
     PKG_CHECK_MODULES(GTKGLEXT, [gtkglext-1.0 >= 1.0], AC_DEFINE(USE_BOARD3D,1,[Define if you want to use the 3d boards]), no_board3d="yes")
   fi
 fi
-
 AM_CONDITIONAL(USE_GTK, test "$no_gtk" != "yes" )
 AM_CONDITIONAL(USE_BOARD3D, test "$no_board3d" != "yes" )
 
@@ -227,8 +226,8 @@ if test "$no_gtk" == "no"; then
   if test "x$GDK_PIXBUF_CSOURCE" = xno; then
     AC_MSG_WARN(Could not find gdk-pixbuf-csource in your PATH, cannot rebuild pixmaps)
   fi
-  AM_CONDITIONAL(FOUND_GDK_PIXBUF_CSOURCE, test "x$GDK_PIXBUF_CSOURCE" != xno )
 fi
+AM_CONDITIONAL(FOUND_GDK_PIXBUF_CSOURCE, test "x$GDK_PIXBUF_CSOURCE" != xno )
 
 dnl
 dnl Check for Python
